irvisualizer/templates/service.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: v1
kind: Service
metadata:
  name: irvisualizer
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector: #@ labels("irvisualizer","frontend")
---
apiVersion: v1
kind: Service
metadata:
  name: ircollector
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector: #@ labels("ircollector","backend")
